# arms_controller

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml
include/arms_controller/: arm.hpp  arm_ros.hpp  arms_controller.hpp  gripper.hpp  icontroller.hpp  iros_node.hpp  joint.hpp  ros_node.hpp
launch/: arms_controller_launch.py
res/: main.qml  res.qrc
res/qml/: ArmControl.qml
src/: arm.cpp  arm_ros.cpp  arms_controller.cpp  gripper.cpp  joint.cpp  main.cpp  ros_node.cpp
