<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arms_controller</name>
    <version>0.0.0</version>
    <description>TODO</description>
    <maintainer email="rgoulartns@gmail.com">Rafael Goulart</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <build_depend>qtbase5-dev</build_depend>
    <exec_depend>libqt5-core</exec_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>control_msgs</depend>
    <depend>rclcpp_action</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
